cc_library(
    name = "discovery",
    srcs = [
        "ServiceRegistry.cpp",
        "HealthChecker.cpp",
        "LoadBalancer.cpp",
        "ServiceDiscovery.cpp",
    ],
    hdrs = [
        "IServiceRegistry.h",
        "IServiceDiscovery.h",
        "ILoadBalancer.h",
        "IHealthChecker.h",
        "ServiceRegistry.h",
        "HealthChecker.h",
        "LoadBalancer.h",
        "ServiceDiscovery.h",
        "DiscoveryTypes.h",
    ],
    strip_include_prefix = ".",
    include_prefix = "Discovery",
    deps = [
        "//:helianthus_config",
        "//Shared/Common:common",
        "//Shared/Network:network",
        "//Shared/Message:message",
        "//Shared/RPC:rpc",
    ],
    visibility = ["//visibility:public"],
)