cc_library(
    name = "message",
    srcs = [
        "Message.cpp",
        "MessageQueue.cpp",
    ],
    hdrs = [
        "Message.h",
        "MessageTypes.h",
        "IMessageQueue.h",
        "MessageQueue.h",
    ],
    copts = select({
        "@bazel_tools//tools/cpp:msvc": ["/std:c++20"],
        "//conditions:default": ["-std=c++17"],
    }),
    strip_include_prefix = ".",
    include_prefix = "Message",
    deps = [
        "//:helianthus_config",
        "//Shared/Common:common",
    ],
    visibility = ["//visibility:public"],
)