cc_library(
    name = "message",
    srcs = [
        "Message.cpp",
    ],
    hdrs = [
        "Message.h",
        "MessageTypes.h",
    ],
    copts = select({
        "@bazel_tools//src/conditions:windows": ["/std:c++20", "/utf-8"],
        "//conditions:default": ["-std=c++20"],
    }),
    strip_include_prefix = ".",
    include_prefix = "Message",
    deps = [
        "//:helianthus_config",
        "//Shared/Common:common",
    ],
    visibility = ["//visibility:public"],
)