load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "message_queue",
    srcs = [
        "MessageQueue.cpp",
    ],
    hdrs = [
        "MessageTypes.h",
        "IMessageQueue.h", 
        "MessageQueue.h",
    ],
    deps = [
        "//Shared/Common:common",
        "//Shared/Network:network",
    ],
    copts = select({
        "@bazel_tools//tools/cpp:msvc": [
            "/std:c++20",
            "/W4",
            "/O2",
        ],
        "//conditions:default": [
            "-std=c++20",
            "-Wall",
            
            "-O2",
        ],
    }),
)