load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "message_queue",
    srcs = [
        "MessageQueue.cpp",
        "MessagePersistence.cpp",
        "HealthCheck.cpp",
        "PerformanceOptimizer.cpp",
        "MessageQueueCompression.cpp",
        "MessageQueueAlerts.cpp",
        "MessageQueueBatching.cpp",
        "MessageQueuePerf.cpp",
        "MessageQueuePersistence.cpp",
    ],
    hdrs = [
        "IMessageQueue.h",
        "MessageQueue.h",
        "MessagePersistence.h",
        "HealthCheck.h",
        "MessageTypes.h",
        "PerformanceOptimizer.h",
    ],
    copts = select({
        "@bazel_tools//src/conditions:windows": ["/std:c++20", "/utf-8"],
        "//conditions:default": ["-std=c++20"],
    }),
    deps = [
        "//Shared/Common:common",
        "//Shared/Message:message",
        "//Shared/Network:network",
        "//Shared/Discovery:discovery",
        "//Shared/Database:database",
        "//Shared/Config:config",
        "//Shared/Reflection:helianthus_reflection",
        "//Shared/Scripting:scripting",
        "//Shared/RPC:rpc",
        "//ThirdParty:miniz",
        "//ThirdParty:tinyaes",

    ],
    linkopts = select({
        "@bazel_tools//src/conditions:windows": [],
        "//conditions:default": ["-lz", "-lssl", "-lcrypto"],
    }),
    
    visibility = ["//visibility:public"],
)