load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "monitoring",
    srcs = ["PrometheusExporter.cpp"],
    hdrs = ["PrometheusExporter.h"],
    copts = select({
        "@bazel_tools//src/conditions:windows": ["/std:c++20", "/utf-8"],
        "//conditions:default": ["-std=c++20"],
    }),
    includes = ["."],
    deps = [
        "//Shared/Network:network",
        "//ThirdParty:picohttpparser",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "enhanced_prometheus_exporter",
    srcs = ["EnhancedPrometheusExporter.cpp"],
    hdrs = ["EnhancedPrometheusExporter.h"],
    copts = select({
        "@bazel_tools//src/conditions:windows": ["/std:c++20", "/utf-8"],
        "//conditions:default": ["-std=c++20"],
    }),
    includes = ["."],
    deps = [
        "//Shared/Network:network",
        "//ThirdParty:picohttpparser",
    ],
    visibility = ["//visibility:public"],
)


