cc_library(
    name = "network",
    srcs = [
        "Sockets/TcpSocket.cpp",
        "Sockets/UdpSocket.cpp",
        "NetworkManager.cpp",
        "WinSockInit.cpp",
        "Asio/IoContext.cpp",
        "Asio/ReactorEpoll.cpp",
        "Asio/ReactorIocp.cpp",
        "Asio/ReactorKqueue.cpp",
        "Asio/AsyncUdpSocket.cpp",
        "Asio/AsyncTcpSocket.cpp",
        "Asio/AsyncTcpAcceptor.cpp",
        "Asio/ProactorReactorAdapter.cpp",
        "Asio/ProactorIocp.cpp",
    ],
    hdrs = [
        "INetworkSocket.h",
        "INetworkManager.h",
        "NetworkTypes.h",
        "WinSockInit.h",
        "Sockets/TcpSocket.h",
        "Sockets/UdpSocket.h",
        "NetworkManager.h",
        "Asio/IoContext.h",
        "Asio/Reactor.h",
        "Asio/ReactorEpoll.h",
        "Asio/ReactorIocp.h",
        "Asio/ReactorKqueue.h",
        "Asio/AsyncUdpSocket.h",
        "Asio/AsyncTcpSocket.h",
        "Asio/AsyncTcpAcceptor.h",
        "Asio/Proactor.h",
        "Asio/ProactorReactorAdapter.h",
        "Asio/ProactorIocp.h",
    ],
    strip_include_prefix = ".",
    include_prefix = "Network",
    deps = [
        "//:helianthus_config",
        "//Shared/Common:common",
        "//Shared/Message:message",
    ],
    visibility = ["//visibility:public"],
)