cc_library(
    name = "network",
    srcs = [
        "Sockets/TcpSocket.cpp",
        "Sockets/UdpSocket.cpp",
        "NetworkManager.cpp",
        "WinSockInit.cpp",
        "Asio/IoContext.cpp",
        "Asio/ReactorEpoll.cpp",
        "Asio/ReactorIocp.cpp",
        "Asio/ReactorKqueue.cpp",
        "Asio/AsyncUdpSocket.cpp",
        "Asio/AsyncTcpSocket.cpp",
        "Asio/AsyncTcpAcceptor.cpp",
        "Asio/ProactorReactorAdapter.cpp",
        "Asio/ProactorIocp.cpp",
        "Asio/MessageProtocol.cpp",
        "Asio/ErrorMapping.cpp",
        "Asio/BufferPool.cpp",
        "Asio/ZeroCopyBuffer.cpp",
        "Asio/MemoryMappedFile.cpp",
    ],
    hdrs = [
        "INetworkSocket.h",
        "INetworkManager.h",
        "NetworkTypes.h",
        "WinSockInit.h",
        "Sockets/TcpSocket.h",
        "Sockets/UdpSocket.h",
        "NetworkManager.h",
        "Asio/IoContext.h",
        "Asio/Reactor.h",
        "Asio/ReactorEpoll.h",
        "Asio/ReactorIocp.h",
        "Asio/ReactorKqueue.h",
        "Asio/IAsyncSocket.h",
        "Asio/AsyncUdpSocket.h",
        "Asio/AsyncTcpSocket.h",
        "Asio/AsyncTcpAcceptor.h",
        "Asio/Proactor.h",
        "Asio/ProactorReactorAdapter.h",
        "Asio/ProactorIocp.h",
        "Asio/MessageProtocol.h",
        "Asio/ErrorMapping.h",
        "Asio/BufferPool.h",
        "Asio/ZeroCopyBuffer.h",
        "Asio/MemoryMappedFile.h",
        "Asio/PerformanceMetrics.h",
    ],
    strip_include_prefix = ".",
    include_prefix = "Network",
    deps = [
        "//:helianthus_config",
        "//Shared/Common:common",
        "//Shared/Message:message",
    ],
    linkopts = select({
        "@bazel_tools//src/conditions:windows": [
            "/DEFAULTLIB:Ws2_32.lib",
            "/DEFAULTLIB:Mswsock.lib",
            "/DEFAULTLIB:Synchronization.lib",
        ],
        "//conditions:default": [],
    }),
    copts = select({
        "@bazel_tools//src/conditions:windows": [
            "/std:c++20",
            "/utf-8",
        ],
        "//conditions:default": [
            "-std=c++20",
        ],
    }),
    visibility = ["//visibility:public"],
)