load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "rpc",
    srcs = [
        "RpcMessage.cpp",
        "RpcClient.cpp", 
        "RpcServer.cpp",
        "NetworkAdapter.cpp",
        "NetworkAdapterFixed.cpp",
        "NetworkAdapterSimple.cpp",
        "MessageRouter.cpp",
    ],
    hdrs = [
        "RpcTypes.h",
        "RpcMessage.h",
        "IRpcClient.h",
        "IRpcServer.h",
        "NetworkAdapter.h",
        "NetworkAdapterFixed.h",
        "NetworkAdapterSimple.h",
        "MessageRouter.h",
    ],
    deps = [
        "//Shared/Common:common",
        "//Shared/Message:message", 
        "//Shared/Network:network",
        "@nlohmann_json//:json",
    ],
    includes = ["."],
)