load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "helianthus_reflection",
    visibility = ["//visibility:public"],
    hdrs = [
        "Reflection.h",
        "Macros.h",
    ],
    srcs = [
        "Reflection.cpp",
    ],
    copts = select({
        "@bazel_tools//src/conditions:windows": ["/std:c++20", "/utf-8"],
        "//conditions:default": ["-std=c++20", "-fPIC"],
    }),
)
